# hy2

./: .gitignore  LICENSE  README.md  clash_to_sharelink.py  heyhy.py  link_to_clash.py  link_to_client_conf.py  nekolink_to_clash.py  pyproject.toml  state.json  test_masquerade.py
examples/: clash_to_share_link.py  clash_to_sharelink.py
examples/templates/: clash_config.yaml
src/heyhy/: logging_config.py  main.py
src/heyhy/cli/: __init__.py  check.py  install.py  log.py  remove.py  start.py  stop.py  update.py
src/heyhy/core/: constants.py  manager.py
src/hy2d/: main.py
src/hy2d/cli/: check.py  install.py  log.py  remove.py  self_.py  start.py  stop.py  update.py
src/hy2d/core/: constants.py  manager.py  utils.py
templates/: clash_config.yaml
